[gd_scene load_steps=25 format=3 uid="uid://dgexycpynnagw"]

[ext_resource type="Script" uid="uid://cw4i8moxins1i" path="res://Bosses/crystal_boss.gd" id="1_3jw4c"]
[ext_resource type="Texture2D" uid="uid://bobwty8kkx546" path="res://Assets/spr_monster_ice_hurt4.png" id="2_oo4th"]
[ext_resource type="Texture2D" uid="uid://djwdjb0oul1cq" path="res://Assets/spr_monster_ice7.png" id="3_cncay"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aedbi"]
atlas = ExtResource("2_oo4th")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdfyl"]
atlas = ExtResource("2_oo4th")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f7g1"]
atlas = ExtResource("2_oo4th")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jusw8"]
atlas = ExtResource("2_oo4th")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xilhe"]
atlas = ExtResource("2_oo4th")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm5nv"]
atlas = ExtResource("3_cncay")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra4eb"]
atlas = ExtResource("3_cncay")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp8or"]
atlas = ExtResource("3_cncay")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7crf"]
atlas = ExtResource("3_cncay")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6imvi"]
atlas = ExtResource("3_cncay")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g57qk"]
atlas = ExtResource("3_cncay")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ttv"]
atlas = ExtResource("3_cncay")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swxs2"]
atlas = ExtResource("3_cncay")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36l2m"]
atlas = ExtResource("3_cncay")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2chsn"]
atlas = ExtResource("3_cncay")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye36e"]
atlas = ExtResource("3_cncay")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_22tto"]
atlas = ExtResource("3_cncay")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx1jq"]
atlas = ExtResource("3_cncay")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0svv4"]
atlas = ExtResource("3_cncay")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xqo1s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aedbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdfyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f7g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jusw8")
}],
"loop": true,
"name": &"damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xilhe")
}],
"loop": true,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm5nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra4eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp8or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7crf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6imvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g57qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ttv")
}],
"loop": true,
"name": &"spin",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swxs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36l2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2chsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye36e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22tto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx1jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0svv4")
}],
"loop": true,
"name": &"spin_fast",
"speed": 30.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g14w7"]
radius = 37.0
height = 86.0

[node name="CrystalBoss" type="CharacterBody2D"]
script = ExtResource("1_3jw4c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(903, 115)
scale = Vector2(2.39063, 2.17188)
sprite_frames = SubResource("SpriteFrames_xqo1s")
animation = &"spin"
frame = 2
frame_progress = 0.297886

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(898, 115)
shape = SubResource("CapsuleShape2D_g14w7")

[node name="bullet_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="pause_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="bullet_timer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="pause_timer" to="." method="_on_pause_timer_timeout"]
